Revamp (fixed z-index)

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ li {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 10;
 }
 
 #navbar li {
